kubernetes/apps/erp/odoo/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odoo
  annotations:
    external-dns/is-public: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:cash-register
    hajimari.io/description: "Odoo is a suite of open-source business apps written in Python and JavaScript."
    hajimari.io/group: services
    hajimari.io/appName: Odoo
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-chain-cloudflare-secure-noauth@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "www.${SECRET_DOMAIN_4}"
      secretName: "www.${SECRET_DOMAIN_4//./-}-prod-tls"
  rules:
    - host: www.${SECRET_DOMAIN_4}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: odoo
                port:
                  number: 8069
